# Abi

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup_phase0.py  setup_phase10_context.py  setup_phase11_context.py  setup_phase12_context.py  setup_phase13_context.py  setup_phase14_context.py  setup_phase15_context.py  setup_phase16_context.py  setup_phase1_context.py  setup_phase2_context.py  setup_phase3_context.py  setup_phase4_context.py  setup_phase5_context.py  setup_phase6a_lite_context.py  setup_phase6b_context.py  setup_phase7a_context.py  setup_phase7b_context.py  setup_phase8_context.py  setup_phase9_context.py
context/: 00_ARCHITECTURE_FREEZE.md  00_CONTEXT_INDEX.md  01_PROJECT_BRIEF.md  02_ENGINEERING_CONTRACT.md  03_ABI_EAR_V1_SPEC.md  04_ABI_REREAD_CORE_SPEC.md  05_FAIL_CLOSED_CONTROLLER_SPEC.md  06_DATA_MODEL.md  07_PROMPT_CONTRACTS.md  08_GATES_AND_EVALUATION.md  09_PRODUCTION_HARNESS_SPEC.md  10_HUMAN_CALIBRATION_SPEC.md  11_MODEL_READINESS_CONSOLIDATION_SPEC.md  12_MODEL_DRIVER_FAKE_CLIENT_SPEC.md  13_FIRST_LIVE_WORKER_SPEC.md  14_LIVE_FIELD_MODEL_WORKER_SPEC.md  15_LIVE_ABI_EAR_PACKET_SPEC.md  16_LIVE_MINIMAL_REREAD_LOOP_SPEC.md  17_SOURCE_TO_ARTIFACT_PRODUCTION_RUN_SPEC.md  18_EVALUATION_BASELINES_SPEC.md  19_FINALIZATION_GATE_POLICY_V2_SPEC.md  20_FINAL_ARTIFACT_AND_PAPER_PACKET_SPEC.md  21_REPO_AUDIT_OPERATOR_HANDOFF_SPEC.md  22_REAL_VALIDATION_PROTOCOL_SPEC.md  23_FIRST_REAL_CANDIDATE_SET_SPEC.md  24_CORE_REALIGNMENT_REMOVE_HUMAN_PAPER_VALIDATION.md  README.md
docs/: CHANGELOG.md  INDEX.md
tests/: test_abi_ear.py  test_abi_ear_cli.py  (+31 more)
(+147 files in other folders)
